# main/docs/swagger.yaml
@@ -15,14 +15,84 @@ definitions:
     type: object
   model.Quant:
     properties:
+      annual_average_return:
+        example: 16
+        type: number
+      cumulative_return:
+        example: 128.2
+        type: number
       description:
         example: quant model description
         type: string
+      holdings_count:
+        example: 22
+        type: integer
+      id:
+        example: 1
+        type: integer
+      max_loss_rate:
+        example: -29.11
+        type: number
       name:
         example: quant model name
         type: string
       user_id:
         type: integer
+      winning_percentage:
+        example: 66.66
+        type: number
+    type: object
+  model.QuantOption:
+    properties:
+      de_ratio:
+        $ref: '#/definitions/quant.DoublePair'
+      dividend_payout_ratio:
+        $ref: '#/definitions/quant.DoublePair'
+      dividend_yield:
+        $ref: '#/definitions/quant.DoublePair'
+      end_date:
+        example: 2021-03-31T00:00:000.Z
+        type: string
+      financing:
+        $ref: '#/definitions/quant.DoublePair'
+      investing:
+        $ref: '#/definitions/quant.DoublePair'
+      main_sectors:
+        items:
+          type: string
+        type: array
+      market_cap:
+        $ref: '#/definitions/quant.IntPair'
+      name:
+        type: string
+      net_profit:
+        $ref: '#/definitions/quant.IntPair'
+      net_profit_rate:
+        $ref: '#/definitions/quant.DoublePair'
+      net_revenue:
+        $ref: '#/definitions/quant.IntPair'
+      net_revenue_rate:
+        $ref: '#/definitions/quant.DoublePair'
+      operating:
+        $ref: '#/definitions/quant.DoublePair'
+      pbr:
+        $ref: '#/definitions/quant.DoublePair'
+      pcr:
+        $ref: '#/definitions/quant.DoublePair'
+      per:
+        $ref: '#/definitions/quant.DoublePair'
+      psr:
+        $ref: '#/definitions/quant.DoublePair'
+      quant_id:
+        example: 1
+        type: integer
+      roa:
+        $ref: '#/definitions/quant.DoublePair'
+      roe:
+        $ref: '#/definitions/quant.DoublePair'
+      start_date:
+        example: 2016-03-31T00:00:000.Z
+        type: string
     type: object
   quant.DoublePair:
     properties:
@@ -42,7 +112,7 @@ definitions:
         example: 1000000
         type: integer
     type: object
-  request.QuantC:
+  request.EditQuantOptionReq:
     properties:
       de_ratio:
         $ref: '#/definitions/quant.DoublePair'
@@ -58,16 +128,12 @@ definitions:
       investing:
         $ref: '#/definitions/quant.DoublePair'
       main_sectors:
-        example:
-        - IT
-        - 소재
         items:
           type: string
         type: array
       market_cap:
         $ref: '#/definitions/quant.IntPair'
       name:
-        example: Model name
         type: string
       net_profit:
         $ref: '#/definitions/quant.IntPair'
@@ -87,6 +153,9 @@ definitions:
         $ref: '#/definitions/quant.DoublePair'
       psr:
         $ref: '#/definitions/quant.DoublePair'
+      quant_id:
+        example: 1
+        type: integer
       roa:
         $ref: '#/definitions/quant.DoublePair'
       roe:
@@ -95,57 +164,19 @@ definitions:
         example: 2016-03-31T00:00:000.Z
         type: string
     type: object
-  request.QuantOptU:
+  request.EditQuantReq:
     properties:
-      de_ratio:
-        $ref: '#/definitions/quant.DoublePair'
-      dividend_payout_ratio:
-        $ref: '#/definitions/quant.DoublePair'
-      dividend_yield:
-        $ref: '#/definitions/quant.DoublePair'
-      end_date:
-        example: 2021-03-31T00:00:000.Z
+      active:
+        example: true
+        type: boolean
+      description:
+        example: New model description
         type: string
-      financing:
-        $ref: '#/definitions/quant.DoublePair'
-      investing:
-        $ref: '#/definitions/quant.DoublePair'
-      main_sectors:
-        example:
-        - IT
-        - 소재
-        items:
-          type: string
-        type: array
-      market_cap:
-        $ref: '#/definitions/quant.IntPair'
-      net_profit:
-        $ref: '#/definitions/quant.IntPair'
-      net_profit_rate:
-        $ref: '#/definitions/quant.DoublePair'
-      net_revenue:
-        $ref: '#/definitions/quant.IntPair'
-      net_revenue_rate:
-        $ref: '#/definitions/quant.DoublePair'
-      operating:
-        $ref: '#/definitions/quant.DoublePair'
-      pbr:
-        $ref: '#/definitions/quant.DoublePair'
-      pcr:
-        $ref: '#/definitions/quant.DoublePair'
-      per:
-        $ref: '#/definitions/quant.DoublePair'
-      psr:
-        $ref: '#/definitions/quant.DoublePair'
-      roa:
-        $ref: '#/definitions/quant.DoublePair'
-      roe:
-        $ref: '#/definitions/quant.DoublePair'
-      start_date:
-        example: 2016-03-31T00:00:000.Z
+      name:
+        example: New model name
         type: string
     type: object
-  request.RegisterRequest:
+  request.RegisterReq:
     properties:
       email:
         example: example@economicus.kr
@@ -156,6 +187,56 @@ definitions:
       password:
         example: some password
         type: string
+    type: object
+  response.ChartData:
+    properties:
+      profit_rate_data:
+        example:
+        - 8.31201046811529
+        - 15.13554790878776
+        - -1.336521221573761
+        - -1.42408166715555
+        - 10.420784591586559
+        - 8.305691643668455
+        - 17.68356243256443
+        - 9.407034979656027
+        - -4.15162926200139
+        - 5.542443496088845
+        - 6.654446258518339
+        items:
+          type: number
+        type: array
+    type: object
+  response.LabData:
+    properties:
+      chart:
+        $ref: '#/definitions/response.ChartData'
+      option:
+        $ref: '#/definitions/model.QuantOption'
+    type: object
+  response.LabQuant:
+    properties:
+      annual_average_return:
+        example: 16
+        type: number
+      cumulative_return:
+        example: 128.2
+        type: number
+      holdings_count:
+        example: 22
+        type: integer
+      max_loss_rate:
+        example: -29.11
+        type: number
+      name:
+        example: model name
+        type: string
+      quant_id:
+        example: 1
+        type: integer
+      winning_percentage:
+        example: 66.66
+        type: number
     type: object
 host: localhost:8080
 info:
@@ -171,6 +252,87 @@ info:
   title: Economicus Main Server
   version: 1.0.0
 paths:
+  /lab/data:
+    get:
+      consumes:
+      - application/json
+      description: 실험실에서 모델을 체크할 때, 모델의 차트 데이터와 옵션 정보를 반환
+      parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: QuantID to get data
+        in: path
+        name: quant_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Data of a quant
+          schema:
+            $ref: '#/definitions/response.LabData'
+        "400":
+          description: Bad request error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+        "401":
+          description: Unauthorized error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+        "404":
+          description: Not found error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+      summary: Return chart and option data
+      tags:
+      - quant
+  /lab/list:
+    get:
+      consumes:
+      - application/json
+      description: 실험실에 들어갈 때, 유저가 실험실에서 테스트하던 모델들 반환
+      parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Quant list
+          schema:
+            items:
+              $ref: '#/definitions/response.LabQuant'
+            type: array
+        "400":
+          description: Bad request error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+        "401":
+          description: Unauthorized error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+        "404":
+          description: Not found error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handler.httpError'
+      summary: Return a list of user's quants
+      tags:
+      - quant
   /login:
     post:
       consumes:
@@ -290,7 +452,7 @@ paths:
         name: quant
         required: true
         schema:
-          $ref: '#/definitions/request.QuantC'
+          $ref: '#/definitions/model.QuantOption'
       produces:
       - application/json
       responses:
@@ -331,7 +493,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/request.QuantOptU'
+          $ref: '#/definitions/request.EditQuantOptionReq'
       - description: QuantID to update
         in: path
         name: quant_id
@@ -465,7 +627,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/request.QuantC'
+          $ref: '#/definitions/request.EditQuantReq'
       produces:
       - application/json
       responses:
@@ -543,7 +705,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/request.RegisterRequest'
+          $ref: '#/definitions/request.RegisterReq'
       produces:
       - application/json
       responses:
@@ -584,7 +746,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/request.RegisterRequest'
+          $ref: '#/definitions/request.RegisterReq'
       produces:
       - application/json
       responses:
